# ntdiff-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: gen.h  lib.rs
